# VulkanEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/Content/Materials/: Image.mat  SimpleShading.mat  SolidColor.mat  Text.mat  Widget.mat  Wireframe.mat
Engine/Content/Shaders/: Image.glsl  SimpleShading.glsl  SolidColor.glsl  Text.glsl  Widget.glsl
Engine/Source/: CoreMinimal.hpp  DefaultEngineConfig.cpp  DefaultEngineConfig.hpp  Engine.cpp  Engine.hpp  EngineStatics.hpp  InputManager.cpp  InputManager.hpp  Log.cpp  Log.hpp  Profiler.cpp  Profiler.hpp  Renderer.cpp  Renderer.hpp  World.cpp  World.hpp  main.cpp
Engine/Source/Actors/: Actor.cpp  Actor.hpp  BoxCollision.cpp  BoxCollision.hpp  Camera.hpp  ComplexCollision.cpp  ComplexCollision.hpp  MeshActor.cpp  MeshActor.hpp  PhysicsBody.cpp  PhysicsBody.hpp  StaticMeshActor.cpp  StaticMeshActor.hpp
Engine/Source/Assets/: AssetBase.hpp  AssetManager.cpp  AssetManager.hpp  Font.cpp  Font.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  StaticMesh.hpp  Texture.cpp  Texture.hpp
Engine/Source/Core/: Color.cpp  Color.hpp  Delegate.hpp  Math.cpp  Math.hpp  Object.cpp  Object.hpp  Random.cpp  Random.hpp  Rotator.cpp  Rotator.hpp  Vector.cpp  Vector.hpp
Engine/Source/Widgets/: Button.cpp  Button.hpp  ContainerBase.cpp  ContainerBase.hpp  HorizontalBox.cpp  HorizontalBox.hpp  Image.cpp  Image.hpp  InputBox.cpp  InputBox.hpp  Overlay.cpp  Overlay.hpp  Text.cpp  Text.hpp  VerticalBox.cpp  VerticalBox.hpp  Widget.cpp  Widget.hpp
Game/Content/Materials/: Sand.mat  Water.mat
Game/Content/Meshes/: Island.fbx  Trash.glb
Game/Content/Shaders/: Water.glsl
Game/Source/: EngineConfig.cpp  GameInstance.cpp  GameInstance.hpp  MenuMap.cpp  MenuMap.hpp  TestWorld.cpp  TestWorld.hpp  VikingRoom.cpp  VikingRoom.hpp
Source/Engine/: CoreMinimal.hpp  DataTypes.hpp  Engine.cpp  Engine.hpp  EngineStatics.cpp  EngineStatics.hpp  InputManager.hpp  Log.cpp  Log.hpp  Renderer.cpp  Renderer.hpp  World.hpp
scripts/: build-debug.ps1  build-release.ps1  compile-shaders.ps1  run.ps1
shaders/: shader.frag  shader.vert  shader.vert.spv
src/: VulkanEngine.cpp  VulkanEngine.hpp  main.cpp
src/Engine/: CoreMinimal.hpp  CoreMinimals.hpp  Engine.cpp  Engine.hpp  EngineStatics.cpp  EngineStatics.hpp  InputManager.cpp  InputManager.hpp  Log.cpp  Log.hpp  Renderer.cpp  Renderer.hpp
(+53 files in other folders)
